internal/kubernetes/testdata/hello-world.golden.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  labels:
    skali.dev/managed: "true"
    skali.dev/project: hello-world
  name: redirect-https
  namespace: skali-hello-world
spec:
  redirectScheme:
    permanent: true
    scheme: https
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  labels:
    skali.dev/managed: "true"
    skali.dev/project: hello-world
  name: compress
  namespace: skali-hello-world
spec:
  compress:
    excludedContentTypes:
    - text/event-stream
    - image/png
    - image/jpeg
    - image/gif
    - image/webp
    - image/avif
    - video/mp4
    - video/webm
    - audio/mpeg
    - font/woff
    - font/woff2
    - application/zip
    - application/gzip
    - application/pdf
    - application/octet-stream
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: app-hello-world-web-abd78f077498c5242c35cf22a58ff77a
    skali.dev/application: web
    skali.dev/color: af58387312
    skali.dev/managed: "true"
    skali.dev/project: hello-world
    skali.dev/service: web
  name: app-hello-world-web-af58387312-79de8b1708d8d8ccb456d898696c8604
  namespace: skali-hello-world
spec:
  replicas: 3
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: app-hello-world-web-abd78f077498c5242c35cf22a58ff77a
      skali.dev/application: web
      skali.dev/color: af58387312
      skali.dev/managed: "true"
      skali.dev/project: hello-world
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-hello-world-web-abd78f077498c5242c35cf22a58ff77a
        skali.dev/application: web
        skali.dev/color: af58387312
        skali.dev/managed: "true"
        skali.dev/project: hello-world
        skali.dev/service: web
    spec:
      containers:
      - image: localhost:5510/skali/hello-world/web@sha256:1111111111111111111111111111111111111111111111111111111111111111
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: http
          periodSeconds: 30
          timeoutSeconds: 2
        name: web
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: http
          periodSeconds: 5
          timeoutSeconds: 2
        resources: {}
      priorityClassName: skali-normal
      terminationGracePeriodSeconds: 30
      topologySpreadConstraints:
      - labelSelector:
          matchLabels:
            app.kubernetes.io/name: app-hello-world-web-abd78f077498c5242c35cf22a58ff77a
            skali.dev/application: web
            skali.dev/color: af58387312
            skali.dev/managed: "true"
            skali.dev/project: hello-world
        maxSkew: 1
        topologyKey: kubernetes.io/hostname
        whenUnsatisfiable: ScheduleAnyway
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: app-hello-world-web-abd78f077498c5242c35cf22a58ff77a
    skali.dev/application: web
    skali.dev/managed: "true"
    skali.dev/project: hello-world
    skali.dev/service: web
  name: app-hello-world-web-abd78f077498c5242c35cf22a58ff77a
  namespace: skali-hello-world
spec:
  ports:
  - appProtocol: http
    name: http
    port: 8080
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/name: app-hello-world-web-abd78f077498c5242c35cf22a58ff77a
    skali.dev/application: web
    skali.dev/color: af58387312
    skali.dev/managed: "true"
    skali.dev/project: hello-world
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    skali.dev/route-hostname: hello.localhost
  labels:
    app.kubernetes.io/name: app-hello-world-web-abd78f077498c5242c35cf22a58ff77a
    skali.dev/application: web
    skali.dev/managed: "true"
    skali.dev/project: hello-world
    skali.dev/service: web
  name: route-hello-world-web-public-p-8299e0a3957673bbdc8130c02cce66a2
  namespace: skali-hello-world
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host("hello.localhost") && PathPrefix("/")
    middlewares:
    - name: compress
    services:
    - name: app-hello-world-web-abd78f077498c5242c35cf22a58ff77a
      port: http
  tls:
    secretName: tls-hello-world-web-public-3851cbafcf5ca3d4f59d4553bc2be2f0
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    skali.dev/route-hostname: hello.localhost
  labels:
    app.kubernetes.io/name: app-hello-world-web-abd78f077498c5242c35cf22a58ff77a
    skali.dev/application: web
    skali.dev/managed: "true"
    skali.dev/project: hello-world
    skali.dev/service: web
  name: route-hello-world-web-public-h-21cbcdc60001b860eaf0a024b3e50b35
  namespace: skali-hello-world
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: Host("hello.localhost") && PathPrefix("/") && !PathPrefix("/.well-known/acme-challenge/")
    middlewares:
    - name: redirect-https
    services:
    - name: app-hello-world-web-abd78f077498c5242c35cf22a58ff77a
      port: http
